[gd_scene load_steps=6 format=3 uid="uid://chc08bt2sbbu"]

[ext_resource type="Script" path="res://Assets/Scripts/scooter.gd" id="1_qms67"]
[ext_resource type="Texture2D" uid="uid://bulr0vxek7a5y" path="res://Assets/Graphics/destroyed_scooter.png" id="1_vgrhy"]
[ext_resource type="StyleBox" uid="uid://bqt0hvmw4s67i" path="res://Assets/scooter.tres" id="3_jokq4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fewe"]
size = Vector2(116, 42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j72ku"]
bg_color = Color(0.164706, 0.356863, 0.188235, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.45098, 0.815686, 0.490196, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Scooter" type="Area2D"]
position = Vector2(254, 130)
script = ExtResource("1_qms67")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("1_vgrhy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 11)
shape = SubResource("RectangleShape2D_6fewe")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -64.0
offset_top = -152.0
offset_right = 52.0
offset_bottom = -68.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.247059, 0.247059, 0.345098)

[node name="Label" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_right = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "CRAFT BETTER
OXYGEN CYLINDER 
FOR 3 SCRAPS"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.813
anchor_right = 0.5
anchor_bottom = 0.863
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = ExtResource("3_jokq4")
theme_override_styles/hover = SubResource("StyleBoxFlat_j72ku")
text = "CRAFT"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
